misc/mTLS.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: test
spec:
  mtls:
    mode: STRICT
